--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_DB: grpc-demo-server
     ports:
       - "5431:5432"
+    volumes:
+      - /var/lib/postgres-data:/var/lib/postgresql/data
   server:
     build:
       context: .
